fix error 32 sql server

--- a/TeduShop.Data/App.config
+++ b/TeduShop.Data/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <clear/>
-    <add name="TeduShopConnection" providerName="System.Data.SqlClient" connectionString="data source=.\SQLEXPRESS;initial catalog=TeduShop;Integrated Security=False;user id=sa;password=12345;MultipleActiveResultSets=True" />
+    <add name="TeduShopConnection" providerName="System.Data.SqlClient" connectionString="data source=.\SQLEXPRESS;initial catalog=TeduShop1;Integrated Security=False;user id=sa;password=12345;MultipleActiveResultSets=True" />
   </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
