--- a/TeduShop.Web/Web.config
+++ b/TeduShop.Web/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <clear/>
-    <add name="TeduShopConnection" providerName="System.Data.SqlClient" connectionString="data source=.\SQLEXPRESS;initial catalog=TeduShop;Integrated Security=False;user id=sa;password=12345;MultipleActiveResultSets=True" />
+    <add name="TeduShopConnection" providerName="System.Data.SqlClient" connectionString="data source=.\SQLEXPRESS;initial catalog=TeduShop1;Integrated Security=False;user id=sa;password=12345;MultipleActiveResultSets=True" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
