--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -59,6 +59,10 @@
     <Compile Include="Migrations\201811261441154_InitialDB.Designer.cs">
       <DependentUpon>201811261441154_InitialDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811281327598_InitialDB1.cs" />
+    <Compile Include="Migrations\201811281327598_InitialDB1.Designer.cs">
+      <DependentUpon>201811281327598_InitialDB1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
@@ -98,6 +102,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201811261441154_InitialDB.resx">
       <DependentUpon>201811261441154_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811281327598_InitialDB1.resx">
+      <DependentUpon>201811281327598_InitialDB1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
