--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -63,8 +63,13 @@
     <Compile Include="Migrations\201811281327598_InitialDB1.Designer.cs">
       <DependentUpon>201811281327598_InitialDB1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811281726349_AddErrorTable.cs" />
+    <Compile Include="Migrations\201811281726349_AddErrorTable.Designer.cs">
+      <DependentUpon>201811281726349_AddErrorTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
     <Compile Include="Repositories\MenuGroupRepository.cs" />
     <Compile Include="Repositories\MenuRepository.cs" />
@@ -105,6 +110,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811281327598_InitialDB1.resx">
       <DependentUpon>201811281327598_InitialDB1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811281726349_AddErrorTable.resx">
+      <DependentUpon>201811281726349_AddErrorTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
