--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -38,6 +38,12 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.2\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.2\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -67,6 +73,14 @@
     <Compile Include="Migrations\201811281726349_AddErrorTable.cs" />
     <Compile Include="Migrations\201811281726349_AddErrorTable.Designer.cs">
       <DependentUpon>201811281726349_AddErrorTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812021748378_Intergrate-AspnetIdentity.cs" />
+    <Compile Include="Migrations\201812021748378_Intergrate-AspnetIdentity.Designer.cs">
+      <DependentUpon>201812021748378_Intergrate-AspnetIdentity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812021831439_Changes.cs" />
+    <Compile Include="Migrations\201812021831439_Changes.Designer.cs">
+      <DependentUpon>201812021831439_Changes.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -114,6 +128,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811281726349_AddErrorTable.resx">
       <DependentUpon>201811281726349_AddErrorTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812021748378_Intergrate-AspnetIdentity.resx">
+      <DependentUpon>201812021748378_Intergrate-AspnetIdentity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812021831439_Changes.resx">
+      <DependentUpon>201812021831439_Changes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
